Added authentication (login, logout, signup)

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
-CONNECTION_URL='mongodb+srv://adi1234:Adi2810D@cluster0.nzyw1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority'
+CONNECTION_URL=mongodb+srv://adi1234:Adi2810D@cluster0.nzyw1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 PORT=5000
+NODE_ENV=development
+JWT_SECRET=abc123
